feat: add detailed information to client payment methods
