# docs/swagger.yaml
@@ -43,6 +43,8 @@ definitions:
         type: string
       country_id:
         type: string
+      detailed_information:
+        type: string
       name:
         type: string
       payment_method_id:
@@ -330,6 +332,8 @@ definitions:
       country:
         $ref: '#/definitions/models.Country'
       countryID:
+        type: string
+      detailedInformation:
         type: string
       id:
         type: string
@@ -1522,6 +1526,41 @@ paths:
       security:
       - BearerAuth: []
       summary: Удалить платёжный метод клиента
+      tags:
+      - client-payment-methods
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: данные
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CreateClientPaymentMethodRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ClientPaymentMethod'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Изменить платёжный метод клиента
       tags:
       - client-payment-methods
   /client/transactions/in:
